crates/graphql-schema-validation/tests/validation_errors/bad_syntax.errors.txt
  × Syntax error:  --> 1:1
  │   |
  │ 1 | "No pos, wow"
  │   | ^---
  │   |
  │   = expected type_system_definition
